--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ body {
   background: linear-gradient(
     13deg,
     var(--color-primary) 47%,
-    var(--color-secondary) 100% /* Updated variable name */
+    var(--color-secondary) 100%
   );
-  box-shadow: var(--color-secondary) 0px 20px 100px 0px; /* Updated variable name */
+  box-shadow: var(--color-secondary) 0px 20px 100px 0px;
 }
 
 #location {
@@ -84,7 +84,7 @@ body {
   bottom: 80px;
   padding: 30px;
   border-radius: 30px;
-  box-shadow: var(--color-secondary) 0px 25px 80px -25px; /* Updated variable name */
+  box-shadow: var(--color-secondary) 0px 25px 80px -25px;
 }
 
 #weather h1 {
@@ -114,7 +114,7 @@ body {
 }
 
 #weather #info span {
-  color: var(--color-secondary); /* Updated variable name */
+  color: var(--color-secondary);
   margin-left: 5px;
 }
 
@@ -129,7 +129,7 @@ body {
   padding: 20px 10px 30px;
   text-align: center;
   border-radius: 20px;
-  box-shadow: var(--color-secondary) 0px 25px 80px -25px; /* Updated variable name */
+  box-shadow: var(--color-secondary) 0px 25px 80px -25px;
   margin-bottom: 40px;
 }
 
@@ -143,7 +143,7 @@ body {
 }
 
 #forecast span {
-  color: var(--color-secondary); /* Updated variable name */
+  color: var(--color-secondary);
 }
 
 #modal {
@@ -215,7 +215,7 @@ body {
   }
 
   #forecast {
-    width: 95%; /* Fixed typo in selector from #forcast to #forecast */
+    width: 95%;
     margin: auto;
   }
 }
